Closed Bug 1091981 Opened 11 years ago Closed 11 years ago

Assertion about not using canonical interface pointer due to downcasting

Categories

(Firefox OS Graveyard :: RIL, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: khuey, Assigned: khuey)

References

Details

(Keywords: assertion, regression)

Attachments

(1 file)

Attached patch PatchSplinter Review
This is similar to bug 1080059. We multiply inherit from an interface, but the pointer we get from downcasting is not the same as the pointer we would get from QI()ing, so nsCOMPtr asserts. This shows up when making a phone call.
Attachment #8514735 - Flags: review?(szchen)
Comment on attachment 8514735 [details] [diff] [review] Patch Review of attachment 8514735 [details] [diff] [review]: ----------------------------------------------------------------- Thank you. I learned something.
Attachment #8514735 - Flags: review?(szchen) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: