Bug 1091981: Make sure to use the canonical nsITelephonyCallback pointer. r=aknow